# pigeon

./: .env.sample  .gitignore  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  agent.md  compose.yaml  index.html  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  report.md  report2.md  result-report.md  todo.md  visualization.html  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: autolabel.yml  nightly-stronghold.yml  release-note.yml  release.yml  test.yml  validate-pr-title.yml
docs/: BACKLOG.md  DEVELOPMENT-STYLE.md  architecture.md  gcp-apis-inventory.md  personas.md
docs/adr/: 0001-llm-provider-abstraction.md  0002-cloud-llm-data-boundary.md  0003-secret-storage-boundary.md  0004-ai-native-dispatch-architecture.md  0005-mail-sync-uid-policy.md  0006-startup-blocking-and-data-fetch-policy.md  README.md
docs/design/: 2026-04-13-oauth-support-design.md  2026-07-10-llm-provider-selection-design.md  2026-07-13-refactoring-diagnosis.md  2026-07-14-phase4-2-usecase-bus-design.md  2026-07-15-ci-hardening-design.md  2026-07-15-external-image-optin-design.md  2026-07-15-release-cicd-design.md  2026-07-17-group-unclassified-into-new-project-design.md  2026-07-17-search-enhancement-design.md  2026-07-17-secure-store-test-speedup-design.md  2026-07-18-hierarchical-projects-design.md  2026-07-19-project-notes-design.md  2026-07-20-classification-observability-design.md  2026-07-20-cli-mcp-driver-design.md  2026-07-20-embedding-visualization-design.md  2026-07-22-embedding-map-window-design.md
docs/plans/: 2026-07-10-llm-provider-selection.md  2026-07-12-sequential-classification.md  2026-07-15-ci-hardening.md  2026-07-15-release-cicd.md  2026-07-15-security-hardening-4-items.md  2026-07-17-group-unclassified-into-new-project.md  2026-07-17-search-phase1-normalization-plan.md  2026-07-17-search-vector-plan.md  2026-07-18-hierarchical-projects-plan.md  2026-07-18-search-mode-ui-smartviews-plan.md  2026-07-19-project-notes-plan.md
scripts/: README.md  requirements.txt  visualize_embeddings.py
scripts/embedding_viz/: aggregate.py  db.py  plot.py  reduce.py
scripts/tests/: test_aggregate.py  test_db.py  test_plot.py  test_reduce.py
src/: App.css  App.tsx  visualization.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bootstrap.rs  context.rs  env_config.rs  error.rs  lib.rs  mail_chunker.rs  main.rs  project_note_digest.rs  project_notes_sync.rs  search_normalize.rs  search_snippet.rs  secure_store.rs  state.rs  test_helpers.rs  threading.rs
src-tauri/src/classifier/: anthropic_common.rs  claude.rs  claude_vertex.rs  factory.rs  gemini_vertex.rs  mod.rs  ollama.rs  parse.rs  prompt.rs  service.rs  test_sa.json  vertex_common.rs
src-tauri/src/cli/: lock.rs  mod.rs  output.rs  progress.rs  runtime.rs  tty.rs
src-tauri/src/commands/: account_commands.rs  attachment_commands.rs  auth_commands.rs  bulk_commands.rs  classify_commands.rs  directory_commands.rs  draft_commands.rs  embedding_map_commands.rs  flag_commands.rs  inline_image_commands.rs  mail_commands.rs  mail_policy.rs  mod.rs  project_commands.rs  project_note_commands.rs  remote_image_commands.rs  saved_search_commands.rs  search_commands.rs  send_commands.rs  settings_commands.rs
src-tauri/src/db/: accounts.rs  approval_queue.rs  assignments.rs  attachments.rs  audit_log.rs  chunks.rs  classification_log.rs  cloud_rules.rs  directories.rs  drafts.rs  embedding_map.rs  fts.rs  mails.rs  migrations.rs  mod.rs  project_contexts.rs  project_files.rs  project_notes.rs  projects.rs  repository.rs  saved_searches.rs  search.rs  sent_sync.rs  settings.rs  tx.rs  vec_ext.rs  vec_search.rs
src-tauri/src/embedding/: mod.rs  worker.rs
src-tauri/src/mail_sync/: idle.rs  imap_client.rs  mime_parser.rs  mod.rs  oauth.rs  smtp_client.rs  sync_service.rs
src-tauri/src/mcp/: protocol.rs  server.rs
src-tauri/src/models/: account.rs  attachment.rs  classifier.rs  directory.rs  draft.rs  mail.rs  mod.rs  project.rs  project_note.rs  saved_search.rs  settings.rs
src-tauri/src/pca/: mod.rs
src-tauri/src/project_context/: cloud_policy.rs  context_file.rs  digest.rs  extractor.rs  mod.rs  scanner.rs
src-tauri/src/usecase/: audit.rs  dispatch.rs  driver.rs  gate.rs  mod.rs  progress.rs  registry.rs  risk.rs  traits.rs
src-tauri/src/usecase/cases/: account.rs  assign.rs  classify.rs  flag.rs  mailbox.rs  mod.rs  project.rs  search.rs  send.rs  sync.rs
src-tauri/tests/: gemini_vertex_live.rs
src/__tests__/: AccountForm.test.tsx  AccountList.test.tsx  App.test.tsx  AttachmentList.test.tsx  BulkActionBar.test.tsx  ClassifyApprovalBar.test.tsx  ClassifyButton.test.tsx  ClassifyResultBadge.test.tsx  CloudSettingsDialog.test.tsx  ComposeModal.test.tsx  ContextMenu.test.tsx  DraftList.test.tsx  DragOverlay.test.tsx  ErrorToast.test.tsx  LlmSettingsDialog.test.tsx  MailActions.test.tsx  MailAssignedListener.test.ts  MailBody.test.tsx  MailHeader.test.tsx  MergeProjectDialog.test.tsx  Modal.test.tsx  NewProjectFromSelectionForm.test.tsx  NewProjectProposal.test.tsx  NotificationToggle.test.tsx  ProjectForm.test.tsx  ProjectListItem.test.tsx  ProjectNoteEditor.test.tsx  ProjectNotePanel.test.tsx  ProjectSelect.test.tsx  ProjectTreeDrop.test.tsx  ProjectTreeNested.test.tsx  RichTextEditor.test.tsx  SearchBar.test.tsx  SearchModeToggle.test.tsx  SearchResults.test.tsx  SearchScopeToggle.test.tsx  Sidebar.test.tsx  SmartViewList.test.tsx  SyncIndicator.test.tsx  ThreadDragItem.test.tsx  (+23 more)
src/api/: accountApi.ts  attachmentApi.ts  classifyApi.ts  client.ts  directoryApi.ts  draftApi.ts  embeddingMapApi.ts  errors.ts  mailApi.ts  projectApi.ts  projectNoteApi.ts  remoteImageApi.ts  savedSearchApi.ts  searchApi.ts  settingsApi.ts
src/constants/: folders.ts  paging.ts
src/hooks/: useBulkActions.ts  (+6 more)
(+182 files in other folders)
