[package]
name = "pigeon"
version = "0.1.0"
description = "AI-powered email client that auto-groups mail by project"
authors = ["you"]
edition = "2021"

[lib]
name = "pigeon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
iota_stronghold = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-imap = "0.11"
async-native-tls = "0.5"
mail-parser = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
zeroize = "1"
dotenvy = "0.15"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
