[package]
name = "pigeon"
version = "0.1.0"
description = "AI-powered email client that auto-groups mail by project"
authors = ["you"]
edition = "2021"

[lib]
name = "pigeon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
iota_stronghold = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-imap = "0.11"
async-native-tls = "0.5"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
mail-parser = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
zeroize = "1"
dotenvy = "0.15"
async-trait = "0.1"
gcp_auth = "0.12.7"
# OAuth id_token の JWKS 署名検証（RS256）
jsonwebtoken = "9"

# SecureStore マスター鍵の OS キーチェーン保管（ADR 0003）。
# Linux はネイティブバックエンドがビルド依存（libdbus）や非永続（keyutils）の
# 問題を持つため keyring を使わず、FileKeyBackend（0600）で暫定保管する。
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native"] }

[dev-dependencies]
tempfile = "3"
# テスト用SA鍵の動的生成（PEM形式の鍵をリポジトリにコミットしないため）
rsa = { version = "0.9", features = ["pem"] }

# RSA鍵生成はデバッグビルドだと数十秒かかるため、テスト用に最適化する
[profile.dev.package.rsa]
opt-level = 3
[profile.dev.package.num-bigint-dig]
opt-level = 3
