[package]
name = "pigeon"
version = "0.1.2"
description = "AI-powered email client that auto-groups mail by project"
authors = ["you"]
edition = "2021"
# バイナリが複数あると `cargo run`（tauri dev が内部で使う）が対象を決められない。
# GUI 本体を既定にする。CLI は `cargo run --bin pigeon-cli` で明示的に起動する。
default-run = "pigeon"

[lib]
name = "pigeon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]] を1つでも明示すると autobins が無効になるため、
# 既存の GUI バイナリ（src/main.rs）も明示的に宣言する。
[[bin]]
name = "pigeon"
path = "src/main.rs"

[[bin]]
name = "pigeon-cli"
path = "src/bin/pigeon-cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
iota_stronghold = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-imap = "0.11"
async-native-tls = "0.5"
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
mail-parser = "0.9"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
# GUI/CLI 間のプロセス排他（flock アドバイザリロック）
fs2 = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# 外部画像URLのホスト種別判定（url::Host。reqwest 経由で既にツリー内にある）
url = "2"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
zeroize = "1"
dotenvy = "0.15"
async-trait = "0.1"
gcp_auth = "0.12.7"
# OAuth id_token の JWKS 署名検証（RS256）
jsonwebtoken = "9"
unicode-normalization = "0.1"
sqlite-vec = "0.1.9"
zerocopy = "0.8"
# UseCase Input から JSON Schema を導出する（MCP tools/list と CLI の引数検証が共用）
schemars = "1.2"

# SecureStore マスター鍵の OS キーチェーン保管（ADR 0003）。
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# Linux は secret-service（GNOME Keyring 等）へ保管する。
# sync-secret-service は libdbus（Cライブラリ）にリンクしビルドが壊れやすく、
# linux-native（kernel keyutils）は再起動で鍵が消えるため、どちらも使わない。
# async-secret-service は zbus ベースの pure Rust で外部依存がない。
# デーモン不在（ヘッドレス等）は実行時に FileKeyBackend（0600）へフォールバック
# する（secure_store::FallbackKeyBackend）。
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["async-secret-service", "tokio", "crypto-rust"] }

[dev-dependencies]
tempfile = "3"
# テスト用SA鍵の動的生成（PEM形式の鍵をリポジトリにコミットしないため）
rsa = { version = "0.9", features = ["pem"] }

# RSA鍵生成はデバッグビルドだと数十秒かかるため、テスト用に最適化する
[profile.dev.package.rsa]
opt-level = 3
[profile.dev.package.num-bigint-dig]
opt-level = 3
